--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </main>
 
     <footer>
-      <img src="img/Logo-game.png" alt="GgameShop" />
+      <img src="img/Logo gameshop.png" alt="GgameShop" />
       <div>
         <h3>Redes sociales</h3>
         <div class="social">
